<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <Switch
        android:id="@+id/switch_automatic_watering"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automatic_watering"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:background="@drawable/circle"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="400"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_humidity_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/wet_soil"
            android:layout_below="@id/tv_humidity"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/colorBlueWet"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flush"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>